--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ rerun.txt
 pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
+config/authy.yml
 
 ## Environment normalisation:
 /.bundle
