--- a/config/application.yml
+++ b/config/application.yml
@@ -1,3 +1,1 @@
-GOOGLE_BOOKS_API_KEY: AIzaSyD81T6xmfnGYIzxCOMkPwlgpE8Orny7wq0
-AWS_ACCESS_KEY: AKIAJK3MNX6RKCSCE6QA
-AWS_SECRET_ACCESS_KEY: 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
+"Removed AWS stuff"
